# CS7450Project

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  progress.yaml  pyproject.toml
.sentinel/: CLAUDE.md  extraction.json  manifest.json
.sentinel/chain_trigger/: cross_review.py  prechecks.py  propagate.py  self_review.py
.sentinel/compaction/: changelog.py  compact.py  state.py
.sentinel/data/: CLAUDE.md  marketplace.json
.sentinel/export/: __init__.py  compliance.py
.sentinel/hooks/: install.sh  pre-commit
.sentinel/hooks/lib/: check_dir_docs.sh  check_headers.sh
.sentinel/scripts/: extract.py
.sentinel/templates/: architecture-md.template.md  compliance-report.template.md  dir-claude-md.template.md  file-header.template.md  progress-yaml.template.md  review-report.template.md  root-claude-md.template.md
.sentinel/writeback/: __init__.py  compact_progress.py  progress_format.py
assets/: CLAUDE.md
assets/data/claim_corrections/: trace-sf-hallucinated-001.json
assets/data/ground_truth/: sf_pois.json
assets/data/sample_profiles/: sf_traveler.yaml
assets/data/sample_traces/: sf_trip_hallucinated.json
docs/: PRD.md  getting-started.md
docs/export/: README.md  requirements.md
docs/sessions/: 2026-04-10-m1-foundation.md
docs/superpowers/specs/: 2026-04-10-conflict-graph-design.md
experiments/: CLAUDE.md
frontend/: package-lock.json
frontend/public/data/: sf_trip_hallucinated.json  (+1 more)
frontend/src/: App.css  App.tsx  index.css
src/agent/: models.py
src/detection/: models.py
src/trace/: models.py
(+12 files in other folders)
