[project]
name = "hallucination-detection-prototype"
version = "0.1.0"
description = "Visual Provenance Analysis for Diagnosing Hallucinations in LLM Agent Execution Traces"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "aiosqlite>=0.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
